--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
-    "axios": "^1.7.8"
+    "axios": "^1.7.8",
+    "express": "^4.18.0"
+
   }
 }
